[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pythone"
version = "0.1.0"
description = "python + one 代码库 - A reusable Python utility library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "pythone contributors"}
]
keywords = ["utilities", "library"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/USERNAME/pythone"
Repository = "https://github.com/USERNAME/pythone"
Issues = "https://github.com/USERNAME/pythone/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pythone*"]

